# robo-call-microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/diagrams/: architecture.mmd  call-lifecycle.mmd  cicd-pipeline.mmd  module-dependencies.mmd  request-flow.mmd
scripts/: render_diagrams.py
src/: app.py
src/api/: deps.py
src/api/v1/: router.py
src/api/v1/endpoints/: call.py  health.py
src/core/: config.py  exceptions.py  logging.py
src/middleware/: request_context.py
src/schemas/: call.py  errors.py  health.py
src/services/: twilio_service.py
tests/: conftest.py  test_call.py  test_health.py
